<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>nl.idfocus.nam</groupId>
    <artifactId>nam-parent</artifactId>
    <version>1.0.7-SNAPSHOT</version>
  </parent>
  <artifactId>nam-filter-locale</artifactId>
  <name>NAM: Locale Request Filter Module</name>
	<dependencies>
		<!-- Regular dependencies -->
		<dependency>
			<groupId>nl.idfocus.nam</groupId>
			<artifactId>nam-util</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.netiq.nam</groupId>
			<artifactId>nidp</artifactId>
			<version>${nam.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>${servlet.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${lang.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${mvn.compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.0</version>
			 	<configuration>
			  		<archive>
			   			<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
			      		</manifest>
			  		</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${mvn.javadoc.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>${javadoc.opts}</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>${jgitflow.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>21</java.version>
		<jgitflow.version>1.0-m5.1</jgitflow.version>
		<mvn.javadoc.version>3.1.1</mvn.javadoc.version>
		<mvn.compiler.version>3.8.1</mvn.compiler.version>
		<file.encoding>UTF-8</file.encoding>
		<nam.version>4.2.2</nam.version>
		<slf4j.version>1.7.12</slf4j.version>
		<lang.version>2.6</lang.version>
		<servlet.version>6.0.0</servlet.version>
		<mockito.version>2.3.4</mockito.version>
		<wiremock.version>1.58</wiremock.version>
		<junit.version>4.11</junit.version>
	</properties>
	<scm>
		<connection>scm:git:https://github.com/IDFocus/nam-extensions.git</connection>
		<developerConnection>scm:git:https://github.com/IDFocus/nam-extensions.git</developerConnection>
		<url>https://github.com/IDFocus/nam-extensions</url>
	</scm>
	<distributionManagement>
		<repository>
			<id>nl.idfocus.maven.release</id>
			<name>Nexus Releases</name>
			<url>http://repository.idfocus.nl/repository/maven-releases</url>
			<uniqueVersion>false</uniqueVersion>
		</repository>
		<snapshotRepository>
			<id>nl.idfocus.maven.snapshot</id>
			<name>Nexus Snapshots</name>
			<url>http://repository.idfocus.nl/repository/maven-snapshots/</url>
			<uniqueVersion>true</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>java8-doclint-disabled</id>
			<activation>
				<jdk>[21,)</jdk>
			</activation>
			<properties>
				<javadoc.opts>-Xdoclint:none</javadoc.opts>
			</properties>
		</profile>
	</profiles>
	<description>A JEE filter that allows for changing the current locale on every request via a query parameter and cookie.</description>
</project>
